--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -138,23 +138,24 @@
 
 \begin{figure}
 \centering
-\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figCloser_Sampling_RSS_Supplement-1.pdf}
-\caption{\label{fig:figResult3_4_supplements} Model comparison between the simple and extended pulse  A) All sampled 50 generations after the gene flow ended with different gene flow durations. B)
-Different sampling times after 800 generations of gene flow.}
-\end{figure}
-
-
-
-\begin{figure}
-\centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figS2_updated_SP-1.pdf}
-\caption{\label{fig:figSGLM_data_SP} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figSGLM_data_SP} Comparison of the standardized difference between true and estimated mean admixture time under the simple pulse model for simulations of all combinations of parameters: ascertainment scheme = LES/HES,   minimal genetic distance ($d_{0}$) = 0.02/0.05 cM, demography = simple/complex (sim/com), recombination = constant/variable (con/var), SNP used 100 \% / 5 \% and the gene flow model = simple pulse/extended pulse (SP/EP). Simulations with a simple pulse gene flow are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figS2_updated_EP-1.pdf}
-\caption{\label{fig:figSGLM_data_EP} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figSGLM_data_EP} Comparison of the standardized difference between true and estimated mean admixture time under the extended pulse model for simulations of all combinations of parameters: ascertainment scheme = LES/HES,   minimal genetic distance ($d_{0}$) = 0.02/0.05 cM, demography = simple/complex (sim/com), recombination = constant/variable (con/var), SNP used 100 \% / 5 \% and the gene flow = simple pulse/extended pulse (SP/EP). Simulations with a simple pulse gene flow are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\end{figure}
+
+
+
+
+\begin{figure}
+\centering
+\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figCloser_Sampling_RSS_Supplement-1.pdf}
+\caption{\label{fig:figResult3_4_supplements} Sampling closer to the admixture event: Normalized difference in the residual-sum-of-squares between the simple pulse fit and extended pulse fit A) Comparison for scenarios sampled 50 generations after the gene flow ended, with different gene flow durations. B)
+Comparison for scenarios with different sampling times after 800 generations of gene flow.}
 \end{figure}
 
 \section{Supplement Tables}
@@ -162,56 +163,56 @@ Different sampling times after 800 generations of gene flow.}
 
 \begin{table}[H]
 
-\caption{\label{tab:table_Supplements_GLM_EP_SP_tm_effect_size_bias}Mean, Standard deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.} 
+\caption{\label{tab:table_Supplements_ests_bias}Comparing effect sizes for technical covariates: GLM parameter estimates on the bias between the true and estimated mean admixture time}
 \centering
 
 \begin{tabular}[t]{l|l|l|r|r|r}
 \hline
-model & GLM & variable & mean & 5.5\% & 94.5\%\\
+model & GLM & covariate & mean & 5.5\% & 94.5\%\\
 \hline
- & difference & Standard Model & 0.00 & -0.07 & 0.06\\
+ & bias & Standard Model & 0.00 & -0.07 & 0.06\\
 
- & difference & Extended GF & -0.17 & -0.23 & -0.11\\
+ & bias & Extended Pulse & -0.17 & -0.21 & -0.13\\
 
- & difference & Varying recombination & -1.22 & -1.29 & -1.16\\
+ & bias & Varying recombination & -1.22 & -1.29 & -1.16\\
 
- & difference & Complex Demography & -0.28 & -0.34 & -0.21\\
+ & bias & Complex Demography & -0.27 & -0.33 & -0.22\\
 
- & difference & d0 = 0.02 & 0.14 & 0.08 & 0.20\\
+ & bias & d0 = 0.02 & 0.15 & 0.08 & 0.21\\
 
- & difference & HES & -0.16 & -0.22 & -0.09\\
+ & bias & HES & -0.15 & -0.22 & -0.09\\
 
- & difference & downsampled & -0.01 & -0.07 & 0.06\\
+ & bias & n SNP = 5\% & 0.00 & -0.06 & 0.05\\
 
- & difference & Interaction downsampled/HES & -0.15 & -0.21 & -0.08\\
+ & bias & Interaction n SNP = 5\%/HES & 0.01 & -0.06 & 0.09\\
 
- & difference & Interaction Complex D./Varying R. & -1.28 & -1.35 & -1.19\\
+ & bias & Interaction Complex D./Varying R. & -0.05 & -0.13 & 0.03\\
 
- & difference & Interaction d0 = 0.02/HES & -0.15 & -0.21 & -0.09\\
+ & bias & Interaction d0 = 0.02/HES & -0.14 & -0.21 & -0.06\\
 
-\multirow{-11}{*}{\raggedright\arraybackslash Simple Pulse} & difference & Interaction d0 = 0.02/Varying R. & -0.89 & -0.96 & -0.83\\
+\multirow{-11}{*}{\raggedright\arraybackslash Simple Pulse} & bias & Interaction d0 = 0.02/Varying R. & 0.18 & 0.10 & 0.26\\
 \cline{1-6}
- & difference & Standard Model & 0.21 & 0.14 & 0.27\\
+ & bias & Standard Model & 0.21 & 0.15 & 0.28\\
 
- & difference & Extended GF & 0.10 & 0.04 & 0.16\\
+ & bias & Extended Pulse & -0.11 & -0.15 & -0.07\\
 
- & difference & Varying recombination & -0.53 & -0.59 & -0.46\\
+ & bias & Varying recombination & -0.74 & -0.80 & -0.67\\
 
- & difference & Complex Demography & -0.22 & -0.29 & -0.16\\
+ & bias & Complex Demography & -0.43 & -0.49 & -0.38\\
 
- & difference & d0 = 0.02 & 0.59 & 0.53 & 0.66\\
+ & bias & d0 = 0.02 & 0.38 & 0.31 & 0.45\\
 
- & difference & HES & 0.03 & -0.03 & 0.10\\
+ & bias & HES & -0.18 & -0.25 & -0.11\\
 
- & difference & downsampled & 0.17 & 0.10 & 0.23\\
+ & bias & n SNP = 5\% & -0.04 & -0.10 & 0.01\\
 
- & difference & Interaction downsampled/HES & 0.04 & -0.03 & 0.10\\
+ & bias & Interaction n SNP = 5\%/HES & 0.05 & -0.03 & 0.13\\
 
- & difference & Interaction Complex D./Varying R. & -1.00 & -1.09 & -0.92\\
+ & bias & Interaction Complex D./Varying R. & -0.44 & -0.52 & -0.36\\
 
- & difference & Interaction d0 = 0.02/HES & 0.02 & -0.05 & 0.08\\
+ & bias & Interaction d0 = 0.02/HES & -0.40 & -0.48 & -0.32\\
 
-\multirow{-11}{*}{\raggedright\arraybackslash Extended Pulse tm} & difference & Interaction d0 = 0.02/Varying R. & 0.31 & 0.25 & 0.38\\
+\multirow{-11}{*}{\raggedright\arraybackslash Extended Pulse tm} & bias & Interaction d0 = 0.02/Varying R. & 0.46 & 0.38 & 0.54\\
 \hline
 \end{tabular}
 \end{table}
@@ -219,119 +220,117 @@ model & GLM & variable & mean & 5.5\% & 94.5\%\\
 
 \begin{table}[H]
 
-\caption{\label{tab:table_Supplements_GLM_EP_SP_tm_effect_size_deviation} }
-
+\caption{\label{tab:table_Supplements_ests_deviation}Comparing effect sizes for technical covariates: GLM parameter estimates on absolute deviation between  the true and estimated mean admixture time}
 \centering
-
 \begin{tabular}[t]{l|l|l|r|r|r}
 \hline
-model & GLM & variable & mean & 5.5\% & 94.5\%\\
+model & GLM & covariate & mean & 5.5\% & 94.5\%\\
 \hline
- & abs. difference & Standard Model & 0.08 & 0.02 & 0.14\\
+ & abs. deviation & Standard Model & 0.08 & 0.02 & 0.14\\
 
- & abs. difference & Extended GF & 0.23 & 0.17 & 0.29\\
+ & abs. deviation & Extended Pulse & 0.15 & 0.12 & 0.19\\
 
- & abs. difference & Varying recombination & 1.33 & 1.27 & 1.39\\
+ & abs. deviation & Varying recombination & 1.26 & 1.19 & 1.32\\
 
- & abs. difference & Complex Demography & 0.25 & 0.20 & 0.31\\
+ & abs. deviation & Complex Demography & 0.17 & 0.12 & 0.22\\
 
- & abs. difference & d0 = 0.02 & 0.02 & -0.04 & 0.08\\
+ & abs. deviation & d0 = 0.02 & -0.06 & -0.12 & 0.00\\
 
- & abs. difference & HES & 0.26 & 0.20 & 0.32\\
+ & abs. deviation & HES & 0.18 & 0.12 & 0.24\\
 
- & abs. difference & downsampled & 0.09 & 0.03 & 0.15\\
+ & abs. deviation & n SNP = 5\% & 0.01 & -0.04 & 0.06\\
 
- & abs. difference & Interaction downsampled/HES & 0.27 & 0.21 & 0.32\\
+ & abs. deviation & Interaction n SNP = 5\%/HES & 0.00 & -0.07 & 0.07\\
 
- & abs. difference & Interaction Complex D./Varying R. & 1.38 & 1.31 & 1.45\\
+ & abs. deviation & Interaction Complex D./Varying R. & 0.03 & -0.03 & 0.11\\
 
- & abs. difference & Interaction d0 = 0.02/HES & 0.29 & 0.23 & 0.35\\
+ & abs. deviation & Interaction d0 = 0.02/HES & 0.10 & 0.03 & 0.17\\
 
-\multirow{-11}{*}{\raggedright\arraybackslash Simple Pulse} & abs. difference & Interaction d0 = 0.02/Varying R. & 1.05 & 0.99 & 1.11\\
+\multirow{-11}{*}{\raggedright\arraybackslash Simple Pulse} & abs. deviation & Interaction d0 = 0.02/Varying R. & -0.23 & -0.30 & -0.16\\
 \cline{1-6}
- & abs. difference & Standard Model & 0.14 & 0.09 & 0.20\\
+ & abs. deviation & Standard Model & 0.15 & 0.09 & 0.20\\
 
- & abs. difference & Extended GF & 0.23 & 0.17 & 0.29\\
+ & abs. deviation & Extended Pulse & 0.09 & 0.05 & 0.12\\
 
- & abs. difference & Varying recombination & 0.97 & 0.91 & 1.02\\
+ & abs. deviation & Varying recombination & 0.82 & 0.76 & 0.88\\
 
- & abs. difference & Complex Demography & 0.17 & 0.11 & 0.23\\
+ & abs. deviation & Complex Demography & 0.02 & -0.03 & 0.07\\
 
- & abs. difference & d0 = 0.02 & 0.26 & 0.20 & 0.32\\
+ & abs. deviation & d0 = 0.02 & 0.11 & 0.05 & 0.17\\
 
- & abs. difference & HES & 0.25 & 0.19 & 0.30\\
+ & abs. deviation & HES & 0.10 & 0.04 & 0.16\\
 
- & abs. difference & downsampled & 0.22 & 0.16 & 0.27\\
+ & abs. deviation & n SNP = 5\% & 0.07 & 0.02 & 0.12\\
 
- & abs. difference & Interaction downsampled/HES & 0.33 & 0.27 & 0.38\\
+ & abs. deviation & Interaction n SNP = 5\%/HES & 0.01 & -0.06 & 0.08\\
 
- & abs. difference & Interaction Complex D./Varying R. & 1.32 & 1.24 & 1.39\\
+ & abs. deviation & Interaction Complex D./Varying R. & 0.28 & 0.21 & 0.35\\
 
- & abs. difference & Interaction d0 = 0.02/HES & 0.33 & 0.27 & 0.39\\
+ & abs. deviation & Interaction d0 = 0.02/HES & -0.03 & -0.10 & 0.04\\
 
-\multirow{-11}{*}{\raggedright\arraybackslash Extended Pulse tm} & abs. difference & Interaction d0 = 0.02/Varying R. & 0.67 & 0.61 & 0.73\\
+\multirow{-11}{*}{\raggedright\arraybackslash Extended Pulse tm} & abs. deviation & Interaction d0 = 0.02/Varying R. & -0.41 & -0.48 & -0.34\\
 \hline
 \end{tabular}
 \end{table}
 
-
 \begin{table}[H]
-\caption{\label{tab:tableSReadl_data_AIC_RSS} AIC and RSS for the fit  to ALD from the 1k Genome data.}
+\tiny
+\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_Estimates}\label{tab:tableS1} Application to Neandertal data: Estimates}
 \centering
 \begin{tabular}[t]{l|l|l|l|l}
 \hline
-Model & A & $t_m$ & c\\
+  & Model & tm & A & c\\
 \hline
-Simple Pulse & 0.018 (0.018 - 0.018) & 1541 (1487 - 1598) & 1e-05 (6e-06 - 1.5e-05)\\
-\hline
-Extended Pulse (td=1) & 0.018 (0.018 - 0.018) & 1541 (1487 - 1598) & 1e-05 (6e-06 - 1.5e-05)\\
-\hline
-Extended Pulse (td=100) & 0.018 (0.018 - 0.018) & 1541 (1488 - 1599) & 1e-05 (6e-06 - 1.5e-05)\\
-\hline
-Extended Pulse (td=200) & 0.018 (0.018 - 0.018) & 1543 (1490 - 1601) & 1e-05 (6e-06 - 1.5e-05)\\
-\hline
-Extended Pulse (td=400) & 0.018 (0.018 - 0.018) & 1552 (1498 - 1610) & 1e-05 (6e-06 - 1.5e-05)\\
-\hline
-Extended Pulse (td=800) & 0.018 (0.018 - 0.018) & 1586 (1531 - 1646) & 1e-05 (5e-06 1.4e-05)\\
-\hline
-Extended Pulse (td=1000) & 0.018 (0.018 - 0.018) & 1613 (1557 - 1673) & 9e-06 (5e-06 - 1.3e-05)\\
-\hline
-Extended Pulse (td=1500) &  0.018 (0.018 - 0.018) & 1713 (1654 - 1777) & 7e-06 (3e-06 - 1.1e-05)\\
-\hline
-Extended Pulse (td=2000) & 0.018 (0.018 - 0.018) & 1875 (1809 - 1945) & 4e-06 (0 - 8e-06)\\
-\hline
-Extended Pulse (td=2500) & 0.018 (0.018 - 0.018) & 2129 (2055 - 2208) & -1e-06 (-5e-06 - 4e-06)\\
+Simple Pulse & Simple Pulse & 1682 (1526 - 1839) & 0.019 (0.019 - 0.019) & 0.000182 (0.00016 - 0.000204)\\
+\cline{1-5}
+Extended Pulse (td=1) & Extended Pulse (td=1) & 1682 (1526 - 1839) & 0.019 (0.019 - 0.019) & 0.000182 (0.00016 - 0.000204)\\
+\cline{1-5}
+Extended Pulse (td=100) & Extended Pulse (td=100) & 1683 (1527 - 1839) & 0.019 (0.019 - 0.019) & 0.000182 (0.00016 - 0.000204)\\
+\cline{1-5}
+Extended Pulse (td=200) & Extended Pulse (td=200) & 1685 (1528 - 1841) & 0.019 (0.019 - 0.019) & 0.000182 (0.00016 - 0.000204)\\
+\cline{1-5}
+Extended Pulse (td=400) & Extended Pulse (td=400) & 1691 (1534 - 1848) & 0.019 (0.019 - 0.019) & 0.00018 (0.000158 - 0.000202)\\
+\cline{1-5}
+Extended Pulse (td=800) & Extended Pulse (td=800) & 1717 (1558 - 1877) & 0.019 (0.019 - 0.019) & 0.000174 (0.000152 - 0.000196)\\
+\cline{1-5}
+Extended Pulse (td=1000) & Extended Pulse (td=1000) & 1736 (1575 - 1898) & 0.02 (0.02 - 0.02) & 0.00017 (0.000148 - 0.000192)\\
+\cline{1-5}
+Extended Pulse (td=1500) & Extended Pulse (td=1500) & 1800 (1633 - 1967) & 0.02 (0.02 - 0.02) & 0.000155 (0.000134 - 0.000177)\\
+\cline{1-5}
+Extended Pulse (td=2000) & Extended Pulse (td=2000) & 1882 (1707 - 2057) & 0.021 (0.021 - 0.021) & 0.000138 (0.000116 - 0.000159)\\
+\cline{1-5}
+Extended Pulse (td=2500) & Extended Pulse (td=2500) & 1978 (1794 - 2161) & 0.022 (0.022 - 0.022) & 0.000118 (9.6e-05 - 0.00014)\\
 \hline
 \end{tabular}
 \end{table}
 
 \begin{table}[H]
 
-\caption{\label{tab:tableSReadl_data_AIC_RSS} AIC and RSS for the fit  to ALD from the 1k Genome data.}
+\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_RSS}\label{tab:tableS1} Application to Neandertal data: RSS}
 \centering
-\begin{tabular}[t]{l|r|r}
+\begin{tabular}[t]{l|r}
 \hline
-Model & AIC & RSS\\
+Model & RSS\\
 \hline
-Simple Pulse & -44845.31 & 4.33e-05\\
-\hline
-Extended Pulse (td=1) & -44845.31 & 4.33e-05\\
-\hline
-Extended Pulse (td=100) & -44846.42 & 4.33e-05\\
-\hline
-Extended Pulse (td=200) & -44849.73 & 4.32e-05\\
-\hline
-Extended Pulse (td=400) & -44862.90 & 4.30e-05\\
-\hline
-Extended Pulse (td=800) & -44914.33 & 4.23e-05\\
-\hline
-Extended Pulse (td=1000) & -44951.47 & 4.18e-05\\
-\hline
-Extended Pulse (td=1500) & -45069.45 & 4.01e-05\\
-\hline
-Extended Pulse (td=2000) & -45200.02 & 3.84e-05\\
-\hline
-Extended Pulse (td=2500) & -45294.46 & 3.72e-05\\
+Simple Pulse & 2.53e-05\\
+\cline{1-2}
+Extended Pulse (td=1) & 2.53e-05\\
+\cline{1-2}
+Extended Pulse (td=100) & 2.53e-05\\
+\cline{1-2}
+Extended Pulse (td=200) & 2.53e-05\\
+\cline{1-2}
+Extended Pulse (td=400) & 2.53e-05\\
+\cline{1-2}
+Extended Pulse (td=800) & 2.51e-05\\
+\cline{1-2}
+Extended Pulse (td=1000) & 2.50e-05\\
+\cline{1-2}
+Extended Pulse (td=1500) & 2.47e-05\\
+\cline{1-2}
+Extended Pulse (td=2000) & 2.44e-05\\
+\cline{1-2}
+Extended Pulse (td=2500) & 2.42e-05\\
 \hline
 \end{tabular}
 \end{table}
