Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -446,7 +446,7 @@ ALD \sim\ A\,e^{-t_m \:d}+c
 ALD \sim\ A\,\left( \frac{1}{1 + \frac{t_m}{k} \:d}\right) ^k+c
 \end{equation}
 
-We fitted the distribution to the data with  a non-linear least-square optimization algorithm using the \texttt{nls} function implemented in the R \texttt{stats v.3.6.2} p
+We fitted the distribution to the data with  a non-linear least-square optimization algorithm using the \texttt{nls} function implemented in the R \texttt{stats v.3.6.2} 
 
 \section{Results}\label{results}
 
@@ -476,16 +476,18 @@ In the previous section, we have shown that we can distinguish long pulses from 
 
 Throughout, we simulation 3 \% Neandertal admixture into non-Africans using a demographic model of archaic introgression (Supplement Figure \ref{fig:figS1}B) with a mean admixture time of 1500 generations ago and varying durations.  We simulate 20 chromsomes of length 150MB, using either a constant recombination map, or using the HapMap recombination map \cite{HapMapConsortium_second_2007} for both simulations and inference. This results in $\approx$ 10,000 introgressed segments. We then perform inference either using the ``true'' simulated segments, segments inferred from the data \citep{skov_detecting_2018}, or ALD calculated using ALDER \citep{loh_inferring_2013}.We further vary recombination rate settings as i) inference and simulation under constant recombination rate (Constant/Constant), ii) simulation using the HapMap genetic map \citep{HapMapConsortium_second_2007}, no correction (HapMap/Constant) (Supplement Figure \ref{fig:figResult2_sup}), iii) simulation using HapMap, correction using African-American map (HapMap/AAMap) (Supplement Figure \ref{fig:figResult2_sup}) \citep{hinch_landscape_2011}, iv) inference and simulation using HapMap (HapMap/HapMap). To enrich for Neandertal informative sites when using ALD, we only consider sites that are fixed for the ancestral state in Africans and polymorphic or fixed derived in Neandertals (lower-enrichment ascertainment scheme (LES)). Pairs of SNPs or segments with a minimal distance smaller 0.05 cM are excluded.
 
-When comparing the results of the model comparison (FIG), we find that the results for the ``true'' (simulated) segments match closely the idealized case. In contrast, we find that for inferred segments, results greatly depend on the recombination rate used. For a constant recombination rate, results are similar, but for the hapmap-recombination map, we do not have any power to distinguish these scenarios. 
+When comparing the results of the model comparison (Figure \ref{fig:figResult2}A), we find that the results for the ``true'' (simulated) segments match closely the idealized case. In contrast, we find that for inferred segments, results greatly depend on the recombination rate used. For a constant recombination rate, results are similar, but for the HapMap-recombination map, we do not have any power to distinguish these scenarios. 
 
-%DO SOMETHING FOR ALD
 
-Next, we investigate how well we can infer parameters. In panel A of Figure \ref{fig:figResult2}, we simulate under a simple pulse ($t_d=1$) and extended pulse models, and infer parameters under either model. In general, we find that the mean admixture times are reasonably accurately estimated in most scenarios, the exception being the inferred segments when using the variable (HapMap) recombination map. The admixture duration is much more poorly estimated, and in most cases has very wide confidence intervals. For intermediate admixture durations of 1,000-1,500 generations the durations are well-estimated, but we observe a slight underestimate for migration events longer than that.
+Next, we investigate how well we can infer parameters. In Figure \ref{fig:figResult2}B, we simulate under a simple pulse ($t_d=1$) and extended pulse models, and infer parameters under either model. In general, we find that the mean admixture times are reasonably accurately estimated in most scenarios, the exception being the inferred segments when using the variable (HapMap) recombination map. The admixture duration is much more poorly estimated, and in most cases has very wide confidence intervals. For intermediate admixture durations of 1,000-1,500 generations the durations are well-estimated, but we observe a slight underestimate for migration events longer than that.
  
-
 We detect a slight, but consistent underestimate of the mean admixture times, which is stronger for longer admixture durations. For the segments, this underestimate is likely due to the slight downward bias caused by recombination and coalescence between admixed segments \cite{liang_lengths_2014}. 
 
 Uncertainties in the recombination map have a pronounced downward bias when estimating $t_m$ for both models. However, we find that the extended pulse model results in good estimates for $t_m$ when inferred using a constant recombination rate. A likely explanation for this is that unaccounted variation in recombination rate gets confounded with variation in admixture time (Supplement Figure \ref{fig:figResult2_sup}).
+
+In Figure \ref{fig:figResult2}C we compare the fit to the data for both models and the ``true'' model. Under a constant recombination rate the true and fitted model agree. When using the variable HapMap the true and fitted models disagree for inferred segments and ALD data. Both the simple and extended pulse try to fit the uncertainties in the recombination distances, since we estimate the compound parameter $t_m r$ and only with perfectly known recombination distances $r$ equals one.
+
+
 
 
 
@@ -507,11 +509,15 @@ For real data application ALD seems more suitable since it produces unbiased est
 We contrast the effect of extended gene flow on admixture time inference with the effects of a simple/complex demographic history (Supplement Figure \ref{fig:figS1}) and a variable recombination map (\emph{i.e.} using an empirical map for simulations but assuming a constant rate for the analysis), as well as the impact of the ascertainment scheme used to amplify Neandertal introgressed variants in the analysis, the minimum genetic distance between variants ,$d_0$, in the ALD estimation and the accuracy of the ALD estimates using a simple and complex setting for each of these parameters. 
 
 
-In Figure \ref{fig:figGLM}, we present the admixture time model effect sizes for these six variables and four interactions. We report the effect sizes on the standardized difference between the true and estimated mean admixture time as well as on the standardized absolute differences. The first can inform us if a variable causes a systematic bias (Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}), whereas the latter is informative about a variable increasing uncertainty in our estimates (Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}). These effect sizes are estimated using a GLM on simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplement Figure \ref{fig:figSGLM_data_SP} and \ref{fig:figSGLM_data_EP}).
+In Figure \ref{fig:figGLM}, we present the admixture time model effect sizes for these six variables and four interactions. We report the effect sizes on the standardized difference between the true and estimated mean admixture time as well as on the standardized absolute differences. The first can inform us if a variable causes a systematic bias (Supplement Table \ref{tab:table_Supplements_ests_bias}), whereas the latter is informative about a variable increasing uncertainty in our estimates (Supplement Table \ref{tab:table_Supplements_ests_deviation}). These effect sizes are estimated using a GLM on simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplement Figure \ref{fig:figSGLM_data_SP} and \ref{fig:figSGLM_data_EP}).
 
-As a baseline, for comparison, we define a standard model as one using the lower-enrichment ascertainment scheme (LES), $d_{0}$ = 0.05 cM, all SNPs used for ALD estimation, simple demography (Supplement Figure \ref{fig:figS1}A) and constant recombination rate over the chromosome. This baseline model results in a good estimate under the single pulse model with low variation, and a slight upward bias 0.21 (0.14 -- 0.27 $C.I._{95\%}$) and slightly more variation in the estimates for the extended pulse model (0.14, 0.09 -- 0.20).
+As a baseline, for comparison, we define a standard model as one using the lower-enrichment ascertainment scheme (LES), $d_{0}$ = 0.05 cM, all SNPs used for ALD estimation, simple demography (Supplement Figure \ref{fig:figS1}A) and constant recombination rate over the chromosome. This baseline model results in unbiased estimate under the single pulse model with low deviation  of 0.08 (0.02 -- 0.14 $C.I._{95\%}$), and a slight upward bias 0.21 (0.15 -- 0.28) and slightly more variation in the estimates for the extended pulse model (0.15, 0.09 -- 0.20).
 
-The effect of an extended period of gene flow is one of the weakest effects with -0.17 (-0.23 -0.11 $C.I._{95\%}$) for the simple pulse and also a minor effect of 0.10 (0.04  0.16 $C.I._{95\%}$) for the extended pulse model. For both models uncertainty in the genetic distances causes a substantial overall downward bias (-1.22, -1.29 -- -1.16 SP; -0.53, -0.59 -- -0.46 EP), as well as highly increased variance in the estimates (1.33, 1.27 -- 1.39 SP; 0.97, 0.91 -- 1.02 EP). Including short-range LD causes and upward bias which is more pronounced in the extended pulse model ( 0.14, 0.08 -- 0.20 SP; 0.59, 0.53 -- 0.66 EP), with no differences in variance for the simple pulse but an increase in the estimates under the extended pulse model (0.26, 0.20 -- 0.32). A more complex demography similarly downward biases the estimates (-0.28, -0.33 -- 0.22 SP; -0.22, --0.29 -- - 0.16 EP) with some minor increases in estimate variance (0.25, -0.20 -- 0.31 SP; 0.17, 0.11 -- 0.23 EP). The ALD estimates seem unbiased since the overall effect of downsampling also with changing ascertainment scheme have only minor effects for both models and fairly robust since the overall introduced variance are (0.09, 0.03 -- 0.15 SP; 0.22, 0.16 -- 0.27). An increasing effect on the variance can be detected for the ascertainment scheme (0.26, 0.20 -- 0.32 SP; 0.25, 0.19 -- 0.30 EP )(Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
+The effect of an extended period of gene flow is one of the weakest effects with -0.17 (-0.21 -0.13) for the simple pulse and also a minor effect of -0.11 (-0.15  0.07) for the extended pulse model. For both models uncertainty in the genetic distances causes a substantial overall downward bias (-1.22, -1.29 -- -1.16 SP; -0.74, -0.80 -- -0.67 EP), as well as highly increased variance in the estimates (1.26, 1.19 -- 1.32 SP; 0.82, 0.76 -- 0.88 EP). Including short-range LD causes and upward bias which is more pronounced in the extended pulse model ( 0.15, 0.08 -- 0.21 SP; 0.38, 0.31 -- 0.66 EP), with no or minor  differences in deviation. A more complex demography downward biases the estimates for both models (-0.27, -0.33 -- 0.22 SP; -0.43, -0.49 -- -0.38 EP) with some minor increases in estimate variance (0.25, -0.20 -- 0.31 SP; 0.17, 0.11 -- 0.23 EP). 
+
+
+
+The ALD estimates seem unbiased since the overall effect of downsampling also with changing ascertainment scheme have only minor effects for both models and fairly robust since the overall introduced variance are (0.09, 0.03 -- 0.15 SP; 0.22, 0.16 -- 0.27). An increasing effect on the variance can be detected for the ascertainment scheme (0.26, 0.20 -- 0.32 SP; 0.25, 0.19 -- 0.30 EP )(Supplement Table \ref{tab:table_S1_EP_tm_td_and_SP_model_3}).
 
 
 Overall the bias introduced by the ascertainment and admixture model are small: around +/-0.16 standard deviations or smaller. The effect of short range LD can be easily avoided by using a longer genetic distance cutoff. The slight downward bias in the estimates from Figure \ref{fig:figResult2} can be explained by the effect of changing population sizes in the demographic model. We conclude that major uncertainties in the admixture time estimate arise from assuming a constant recombination rate. The admixture time estimates using a simple or extended admixture pulse are similarly affected by the other modeling parameters.
