--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -131,7 +131,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_all_together_Supplements-1.pdf}
-\caption{\label{fig:figResult2_sup} Comparison between the simple and extended pulse one true and inferred segment length and ALD decay estimates using an empirical recombination map (HapMap) for simulations with a fixed mean time ($t_m$) of 1500 generations ago and varying durations ($t_d$). Genetic distances are assigned either using a constant rate or the AAMap . A) log likelihood ratios between the two models for segment data and standardized difference between the residual sum-of-squares between the two models for ALD data. B) Mean time estimates of admixture and extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, black dotted line indicates expected inverse of the mean segment length under the extended pulse model, red dotted line indicates migration corrected admixture time ($t_m$(1-m)). C) Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
+\caption{\label{fig:figResult2_sup} Comparison between the simple and extended pulse one true and inferred segment length and ALD decay estimates using an empirical recombination map (HapMap) for simulations with a fixed mean time ($t_m$) of 1500 generations ago and varying durations ($t_d$). Genetic distances are assigned either using a constant rate or the AAMap . A) log likelihood ratios between the two models for segment data and normalized difference between the residual sum-of-squares between the two models for ALD data. B) Mean time estimates of admixture and extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, red dotted line indicates migration corrected admixture time ($t_m$(1-m)). C) Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
 \end{figure}
 
 
@@ -154,8 +154,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figCloser_Sampling_RSS_Supplement-1.pdf}
-\caption{\label{fig:figResult3_4_supplements} Sampling closer to the admixture event: Normalized difference in the residual-sum-of-squares between the simple pulse fit and extended pulse fit A) Comparison for scenarios sampled 50 generations after the gene flow ended, with different gene flow durations. B)
-Comparison for scenarios with different sampling times after 800 generations of gene flow.}
+\caption{\label{fig:Closer_sampling_supplement} Sampling closer to the admixture event: Normalized difference in the residual-sum-of-squares between the simple pulse fit and extended pulse fit A) Comparison for scenarios sampled 50 generations after the gene flow ended, with different gene flow durations. B) Comparison for scenarios with different sampling times after 800 generations of gene flow.}
 \end{figure}
 
 \section{Supplement Tables}
@@ -275,7 +274,7 @@ model & GLM & covariate & mean & 5.5\% & 94.5\%\\
 
 \begin{table}[H]
 \tiny
-\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_Estimates}\label{tab:tableS1} Application to Neandertal data: Estimates}
+\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_Estimates} Application to Neandertal data: Estimates}
 \centering
 \begin{tabular}[t]{l|l|l|l|l}
 \hline
@@ -306,7 +305,7 @@ Extended Pulse (td=2500) & Extended Pulse (td=2500) & 1978 (1794 - 2161) & 0.022
 
 \begin{table}[H]
 
-\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_RSS}\label{tab:tableS1} Application to Neandertal data: RSS}
+\caption{\label{tab:table_Supplements_Application_to_Neandertal_data_RSS} Application to Neandertal data: RSS}
 \centering
 \begin{tabular}[t]{l|r}
 \hline
